metadata-objects/extracted/unpackaged/objects/Line_Proforma__c.object
<CustomObject>
    <fields>
        <fullName>Alias__c</fullName>
        <label>Alias</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier</label>
        <referenceTo>Carrier__c</referenceTo>
        <relationshipLabel>Línea Proforma Borrador</relationshipLabel>
        <relationshipName>Linea_Proforma_Borrador</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Descripción de partida</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Direccion_Entrega__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dirección de entrega</label>
        <referenceTo>ShippingAddress__c</referenceTo>
        <relationshipLabel>Línea Proforma Borrador</relationshipLabel>
        <relationshipName>Linea_Proforma_Borrador</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Descuento</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ListPrice__c</fullName>
        <label>Precio de lista</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Producto</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Línea Proforma Borrador</relationshipLabel>
        <relationshipName>Linea_Proforma_Borrador</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <label>Código de Producto</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Proforma_Borrador__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proforma Borrador</label>
        <referenceTo>Proforma_Borrador__c</referenceTo>
        <relationshipLabel>Línea Proforma Borrador</relationshipLabel>
        <relationshipName>Linea_Proforma_Borrador</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Cantidad</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ServiceDate__c</fullName>
        <label>Fecha</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <label>Precio total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>Precio de venta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Línea Proforma Borrador</label>
    <nameField>
        <label>Nombre de Proforma Línea</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Línea Proforma Borrador</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>